# local_ai_with_rust_and_react_js

ai_web_assistant/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  messages.json  nginx.conf  sessions.json  users.json
ai_web_assistant/migrations/: 20250803233616_create_users_table.sql
ai_web_assistant/src/: main.rs
ai_web_assistant/src/config/: config_llm.rs  mod.rs  settings.rs
ai_web_assistant/src/connection/: db.rs
ai_web_assistant/src/controllers/: auth_controller.rs  user_controller.rs
ai_web_assistant/src/helpers/: message_manager.rs  mod.rs
ai_web_assistant/src/middleware/: auth.rs
ai_web_assistant/src/models/: users.rs
ai_web_assistant/src/payloads/: communication_request.rs  communication_response.rs  connection_request.rs  login_request.rs  mod.rs  register_request.rs
ai_web_assistant/src/repository/: auth_repository.rs  mod.rs  user_repository.rs
ai_web_assistant/src/responses/: login_responses.rs  mod.rs  responses.rs
ai_web_assistant/src/router/: url.rs
ai_web_assistant/src/services/: auth_service.rs  llm_service.rs  mod.rs  user_service.rs
ai_web_assistant/src/swagger_doc/: doc.rs
ai_web_assistant/src/utils/: file_models.rs  file_utils.rs  jwt.rs  mod.rs
ai_web_assistant/src/ws/: mod.rs  ws_auth.rs  ws_channel.rs  ws_handler.rs  ws_server.rs
chatbot-ui/: index.html  package-lock.json  package.json  vite.config.js
chatbot-ui/src/: about.html
chatbot-ui/src/app/: App.jsx
chatbot-ui/src/assets/images/: AIBots.avif
chatbot-ui/src/auth/: login.css  login.jsx  logout.jsx  register.jsx
chatbot-ui/src/components/: Chatbot.css  Chatbot.js  MarkdownStyle.jsx
chatbot-ui/src/default/: Home.css  Home.jsx
chatbot-ui/src/middleware/: PrivateRoute.js  PublicRoute.js
chatbot-ui/src/services/: AuthenticationServices.js
chatbot-ui/src/utils/: FormatMessageAdvanced.jsx  appManager.js  chatManager.js
