[package]
name = "ai_web_assistant"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code="forbid"
unused ="allow"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework & HTTP
axum = { version = "0.7", features = ["ws"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"


vader_sentiment = "0.1"
dotenv = "0.15"
env_logger = "0.11.7"
openssl-probe = "0.1"
serde_json = "1.0"
bincode = "2.0.1"
bytes = "1.0"
thiserror = "2.0.15"
validator = { version = "0.20.0", features = ["derive"] }
dashmap = "6.1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rand_core = "0.9.3"
async-trait = "0.1"
headers = "0.4"
axum-auth = "0.8.1"
once_cell = "1.19"
futures = "0.3"
num-bigint = { version = "0.4", features = ["serde"] }
num = "0.4"
rand = "0.8"
sha2 = "0.10.9"
hex = "0.4.3"
bs58 = "0.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging & error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.97"

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"              # password hashing
uuid = { version = "1", features = ["v4"] }
password-hash = "0.5"

# Database
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
    "migrate"
] }
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# WebSocket utilities
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }


# OpenAPI + Swagger UI
utoipa = { version = "5.1.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
llm = { git = "https://github.com/rustformers/llm.git" }

indicatif = "0.17.11"
console = { version = "0.16", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.7.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
tempfile = "3.3"
http = "1"
http-body-util = "0.1"
hyper = "1"

[features]
default = []
ttl = []
lsm = []
binary-protocol = []
replication = []
persistence = []
full = []
